--- a/index.html
+++ b/index.html
@@ -3,9 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
 <body>
-    
+    <header>
+        <ul>
+            <nav>
+                <p>
+                    <a href="index.html">WEBSTUDIO</a>
+                </p>
+                <p>Studio</p>
+                <p>Portfolio</p>
+                <p>Contacts</p>
+            </nav>
+        </ul>
+    </header>
+    <main>
+
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+
+        <div>
+            <h3>Strategy</h3>
+            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+
+            <h3>Punctuality</h3>
+            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+
+            <h3>Diligence</h3>
+            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+
+            <h3>Technologies</h3>
+            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+        </div>
+
+        <div>
+            <h2>What are we doing</h2>
+            <img src="images/img1.png" alt="image1" width="360">
+            <img src="images/img2.png" alt="image2" width="360">
+            <img src="images/img3.png" alt="image3" width="360">
+        </div>
+
+        <div>
+            <h2>Our Team</h2>
+            <div>
+                <img src="images/mark.png" alt="mark" width="264">
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
+            </div>
+
+            <div>
+                <img src="images/tom.png" alt="tom" width="264">
+                <h3>Tom Ford</h3>
+                <p>Frontend Developer</p>
+            </div>
+
+            <div>
+                <img src="images/camila.png" alt="camila" width="264">
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
+            </div>
+
+            <div>
+                <img src="images/daniel.png" alt="daniel" width="264">
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <a href="index.html">WEBSTUDIO</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
 </body>
 </html>
