--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <ul>
+        <div>
             <nav>
                 <p>
                     <a href="index.html">WEBSTUDIO</a>
@@ -16,7 +16,8 @@
                 <p>Portfolio</p>
                 <p>Contacts</p>
             </nav>
-        </ul>
+            
+        </div>
     </header>
     <main>
 
