--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <header>
         <div>
             <nav>
-                <p>
-                    <a href="index.html">WEBSTUDIO</a>
-                </p>
+                <a href="index.html">
+                    <p>WEBSTUDIO</p>
+                </a>
                 <p>Studio</p>
                 <p>Portfolio</p>
                 <p>Contacts</p>
@@ -85,7 +85,9 @@
         </section>
     </main>
     <footer>
-        <a href="index.html">WEBSTUDIO</a>
+        <a href="index.html">
+            <p>WEBSTUDIO</p>
+        </a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
