--- a/index.html
+++ b/index.html
@@ -7,95 +7,111 @@
 </head>
 <body>
     <header>
-        <!--Logo-->
-        <a href="index.html">WEBSTUDIO</a>
-        <div>
+        <nav>
+            <!--Logo-->
+            <link href="index.html">WEBSTUDIO</link>
             <!--Navigate-->
-            <nav>
+            <div>
                 <ul>
                     <li><a href="">Studio</a></li>
                     <li><a href="">Portfolio</a></li>
                     <li><a href="">Contacts</a></li>
                 </ul>
-            </nav>
-        </div>
+            </div>
+        </nav>
         <!--Contacts-->
-        <div>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-        </div>
+        <address>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
+        </address>
     </header>
     <!--Main-->
     <main>
         <!--Title-->
-        <div>
+        <section>
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
-        </div>
+        </section>
 
         <!--Section 1-->
         <section>
-            <div>
-                <h3>Strategy</h3>
-                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
-            </div>
-
-            <div>
-                <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-            </div>
-
-            <div>
-                <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-            </div>
-
-            <div>
-                <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-            </div>
+            <h2>Section 1</h2>
+            <ul>
+                <li>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+                </li>
+                <li>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                </li>
+                <li>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+            </ul>
         </section>
 
         <!--Section 2-->
         <section>
             <h2>What are we doing</h2>
-            <img src="images/img1.jpg" alt="image1" width="360">
-            <img src="images/img2.jpg" alt="image2" width="360">
-            <img src="images/img3.jpg" alt="image3" width="360">
+            <ul>
+                <li>
+                    <img src="images/img1.jpg" alt="image1" width="360">
+                </li>
+                <li>
+                    <img src="images/img2.jpg" alt="image2" width="360">
+                </li>
+                <li>
+                    <img src="images/img3.jpg" alt="image3" width="360">
+                </li>
+            </ul>
         </section>
 
         <!--Section 3-->
         <section>
             <h2>Our Team</h2>
-            <!--Mark-->
-            <div>
-                <img src="images/mark.jpg" alt="mark" width="264">
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
-            </div>
-            <!--Tom-->
-            <div>
-                <img src="images/tom.jpg" alt="tom" width="264">
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
-            </div>
-            <!--Camila-->
-            <div>
-                <img src="images/camila.jpg" alt="camila" width="264">
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
-            </div>
-            <!--Daniel-->
-            <div>
-                <img src="images/daniel.jpg" alt="daniel" width="264">
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
-            </div>
+            <ul>
+                <!--Mark-->
+                <li>
+                    <img src="images/mark.jpg" alt="mark" width="264">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <!--Tom-->
+                <li>
+                    <img src="images/tom.jpg" alt="tom" width="264">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <!--Camila-->
+                <li>
+                    <img src="images/camila.jpg" alt="camila" width="264">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <!--Daniel-->
+                <li>
+                    <img src="images/daniel.jpg" alt="daniel" width="264">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
         </section>
     </main>
     <!--Footer-->
     <footer>
-        <a href="index.html">WEBSTUDIO</a>
+        <link href="index.html">WEBSTUDIO</link>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
