--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <nav>
             <!--Logo-->
-            <link href="index.html">WEBSTUDIO</link>
+            <a href="./index.html">WEBSTUDIO</a>
             <!--Navigate-->
             <div>
                 <ul>
@@ -111,7 +111,7 @@
     </main>
     <!--Footer-->
     <footer>
-        <link href="index.html">WEBSTUDIO</link>
+        <a href="./index.html">WEBSTUDIO</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
