--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
     <header>
         <nav>
             <!--Logo-->
-            <a href="./index.html">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
             <!--Navigate-->
-            <div>
-                <ul>
-                    <li><a href="">Studio</a></li>
-                    <li><a href="">Portfolio</a></li>
-                    <li><a href="">Contacts</a></li>
-                </ul>
-            </div>
+            <ul>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
+            </ul>
         </nav>
         <!--Contacts-->
         <address>
@@ -111,7 +109,7 @@
     </main>
     <!--Footer-->
     <footer>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
