--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
             <h2>What are we doing</h2>
             <ul>
                 <li>
-                    <img src="images/img1.jpg" alt="image1" width="360">
+                    <img src="./images/img1.jpg" alt="image1" width="360">
                 </li>
                 <li>
-                    <img src="images/img2.jpg" alt="image2" width="360">
+                    <img src="./images/img2.jpg" alt="image2" width="360">
                 </li>
                 <li>
-                    <img src="images/img3.jpg" alt="image3" width="360">
+                    <img src="./images/img3.jpg" alt="image3" width="360">
                 </li>
             </ul>
         </section>
@@ -82,25 +82,25 @@
             <ul>
                 <!--Mark-->
                 <li>
-                    <img src="images/mark.jpg" alt="mark" width="264">
+                    <img src="./images/mark.jpg" alt="mark" width="264">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <!--Tom-->
                 <li>
-                    <img src="images/tom.jpg" alt="tom" width="264">
+                    <img src="./images/tom.jpg" alt="tom" width="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <!--Camila-->
                 <li>
-                    <img src="images/camila.jpg" alt="camila" width="264">
+                    <img src="./images/camila.jpg" alt="camila" width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <!--Daniel-->
                 <li>
-                    <img src="images/daniel.jpg" alt="daniel" width="264">
+                    <img src="./images/daniel.jpg" alt="daniel" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
